# GridFlow

./: .coverage  .gitignore  CITATION.cff  GridFlow.spec  GridFlowGUI_Setup.iss  HOW_TO_USE_CLI.txt  README.md  build_executable.py  dpi_aware.exe.manifest  gridflow.spec  gridflow1.spec  gridflow_wrapper.py  hook-dpi.py  paper.md  pyproject.toml  requirements.txt  requirements_cli.txt  requirements_dev.txt  requirements_gui.txt  run_gui.py  setup.py  setup_cli.bat  setup_cli.sh  test_config.json  test_versions.py
JOSS-PAPER/: paper.bib  paper.md
catalog/: cmip6_catalog.json
clipped_data/: ScenarioMIP_100km_tas_Amon_CMCC-ESM2_ssp126_r1i1p1f1_gn_201501-210012_clipped.nc  ScenarioMIP_100km_tas_Amon_CMCC-ESM2_ssp245_r1i1p1f1_gn_201501-210012_clipped.nc  ScenarioMIP_100km_tas_Amon_CMCC-ESM2_ssp370_r1i1p1f1_gn_201501-210012_clipped.nc  ScenarioMIP_100km_tas_Amon_CMCC-ESM2_ssp534-over_r1i1p1f1_gn_201501-210012_clipped.nc  ScenarioMIP_100km_tas_Amon_CMCC-ESM2_ssp585_r1i1p1f1_gn_201501-210012_clipped.nc
conus_border/: conus.dbf  conus.qmd
gridflow/: __init__.py  catalog_generator.py  cli.py  clip_netcdf.py  cmip5_downloader.py  cmip6_downloader.py  commands.py  crop_netcdf.py  entry.py  gui.py  prism_downloader.py  thread_stopper.py
gui/: main-working.py  main.py  main1.py
metadata/: gridflow_prism_query_results.json
tests/: stopper_test.py  test_catalog_generator.py  test_cli.py  test_clip_netcdf.py  test_cmip5_downloader.py  test_cmip6_downloader.py  test_commands.py  test_crop_netcdf.py  test_dem_downloader.py  test_entry.py  test_era5_downloader.py  test_main.py  (+6 more)
(+18 files in other folders)
