# pyproject.toml

[build-system]
requires = [
    "setuptools>=61.0",
    "wheel"
]
build-backend = "setuptools.build_meta"

[project]
name = "gridflow"
version = "1.0"
requires-python = ">=3.10,<3.13"
dependencies = [
  "pillow>=9.0.0",
  "requests>=2.28.0",
  "numpy<2.0; python_version < '3.13'",
  "numpy>=2.0; python_version >= '3.13'",
  "netCDF4>=1.5.8",
  "geopandas>=0.10.0",
  "shapely>=1.8.0",
  "python-dateutil>=2.8.0",
  "cdsapi>=0.7.4",
  "PyQt5>=5.15.0",
  "pyproj>=3.0.0",
  "beautifulsoup4>=4.0.0",
  "boto3>=1.26.0",
  "rich>=13.0.0",
  "pyogrio>=0.6.0"
]
